# ChangeLog for media-sound/alsa-utils
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.214 2007/09/17 16:46:49 phreak Exp $

*alsa-utils-1.0.14-r1 (17 Sep 2007)

  17 Sep 2007; Christian Heim <phreak@gentoo.org>
  +files/alsa-utils-1.0.14-remove-debug-printing.patch,
  +alsa-utils-1.0.14-r1.ebuild:
  Add a patch from upstream, removing a debug print
  (http://hg-mirror.alsa-project.org/alsa-utils/rev/b230fef1ea76 - #184716
  thanks to Mario Bachmann <grafgrimm77 at gmx.de>).

  10 Sep 2007; Jeroen Roovers <jer@gentoo.org> alsa-utils-1.0.14.ebuild:
  Stable for HPPA (bug #189155).

  08 Sep 2007; Joseph Jezak <josejx@gentoo.org> alsa-utils-1.0.14.ebuild:
  Marked ppc/ppc64 for bug #189155.

  26 Aug 2007; Jurek Bartuszek <jurek@gentoo.org> alsa-utils-1.0.14.ebuild:
  x86 stable (bug #189155)

  25 Aug 2007; Steve Dibb <beandog@gentoo.org> alsa-utils-1.0.14.ebuild:
  amd64 stable

  16 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  alsa-utils-1.0.14.ebuild:
  Stable on sparc

*alsa-utils-1.0.14 (27 Jun 2007)

  27 Jun 2007; Tony Vroon <chainsaw@gentoo.org>
  +files/alsa-utils-1.0.14-seq.patch, +alsa-utils-1.0.14.ebuild:
  Version bump to 1.0.14 final as requested in bug #181042.

  27 May 2007; Joshua Kinard <kumba@gentoo.org>
  alsa-utils-1.0.14_rc2-r3.ebuild:
  Stable on mips.

  01 May 2007; Markus Rothe <corsair@gentoo.org>
  alsa-utils-1.0.14_rc2-r3.ebuild:
  Stable on ppc64; bug #175141

  27 Apr 2007; Daniel Drake <dsd@gentoo.org> files/alsa-modules.conf-rc,
  -alsa-utils-1.0.11.ebuild, -alsa-utils-1.0.12.ebuild,
  alsa-utils-1.0.13.ebuild, alsa-utils-1.0.14_rc1.ebuild,
  -alsa-utils-1.0.14_rc2.ebuild, -alsa-utils-1.0.14_rc2-r1.ebuild,
  -alsa-utils-1.0.14_rc2-r2.ebuild:
  Remove old versions, remove references to modules-update (it's now
  update-modules)

  26 Apr 2007; Steve Dibb <beandog@gentoo.org>
  alsa-utils-1.0.14_rc2-r3.ebuild:
  amd64 stable, bug 175141