@@ -45,6 +45,7 @@ DIST alsa-utils-1.0.13.tar.bz2 980874 RMD160 2a3cd882543232f81e211d216c9e8112da3
 DIST alsa-utils-1.0.14.tar.bz2 1013872 RMD160 e912588fc6ad223c7176847b8f99c80dd2ca7bb5 SHA1 767e71805ee606a4589bda9e95babbca61f9e92f SHA256 307d630f0ed15e7e92fa35dc0c961737fa9aed22bd7a4a6054a72f85145fa5cb
 DIST alsa-utils-1.0.14rc1.tar.bz2 980802 RMD160 7d05cca060486d64e6ba87aa8c4a7e9b7a069ddb SHA1 7766c7c09f162b10e1abcb6733f57d5935d7f1ec SHA256 9b8ede92cfa5f28d6bf6bb1253bdc562f8ac937797fb5e5303609e2e49c2e886
 DIST alsa-utils-1.0.14rc2.tar.bz2 981123 RMD160 9975bc5c71df585ad1818647a1abb2be68910403 SHA1 6b1556930e413764ef71e7097d3436999ae8e4eb SHA256 306bd7c4436c1c56a0a499317e23b5b58aea3718df17c138ab0df56fd9bf3e0c
+DIST alsa-utils-1.0.15rc1.tar.bz2 1014178 RMD160 22459fbda594c5d1e9030c1f1715437eee32bd73 SHA1 ea5d5d1bea124879807c59c8a7c1859b39c15a0a SHA256 41ae98393b7a4fd2f32831f055a32e44efaf2344085cf2b5483400ddc616b632
 EBUILD alsa-utils-1.0.13.ebuild 2826 RMD160 d05362a8df0153ae456c126dffe40907b2453a1f SHA1 a8e0acbd9f146ac7e24b62903d297a952a25f10e SHA256 2eca368f52ebc1b2c680b32e8b91d419e4f3cccba7f1b8b6ad0ecf0de89aee3b
 MD5 fec6917a9ec2015173aad26048dd4729 alsa-utils-1.0.13.ebuild 2826
 RMD160 d05362a8df0153ae456c126dffe40907b2453a1f alsa-utils-1.0.13.ebuild 2826
@@ -65,10 +66,14 @@ EBUILD alsa-utils-1.0.14_rc2-r3.ebuild 2252 RMD160 a6e22f35ff9c5bb88cda6d61a0711
 MD5 10ccd69d04a5eb566a4cdb0d3691fecf alsa-utils-1.0.14_rc2-r3.ebuild 2252
 RMD160 a6e22f35ff9c5bb88cda6d61a0711899bdbb4ee3 alsa-utils-1.0.14_rc2-r3.ebuild 2252
 SHA256 d76c90e6a2ffeb0237939c151f935963f98d417c7603a9fd21c61959e75b3a4e alsa-utils-1.0.14_rc2-r3.ebuild 2252
-MISC ChangeLog 32219 RMD160 bb80c1b95c4b1c93804d813875e766ad4eed30ee SHA1 64136a90c113ab3a24f9db4264aec52ecb021bed SHA256 57e5682ed741d758e2bfc0657e83e6442dd799143da6b119beb1e609ba9c638b
-MD5 de9872808578c8f5b6325b99c5bbf82d ChangeLog 32219
-RMD160 bb80c1b95c4b1c93804d813875e766ad4eed30ee ChangeLog 32219
-SHA256 57e5682ed741d758e2bfc0657e83e6442dd799143da6b119beb1e609ba9c638b ChangeLog 32219
+EBUILD alsa-utils-1.0.15_rc1.ebuild 2312 RMD160 426e9128db05cc7dc9d0c539408440a3b8b475ad SHA1 769d1d5aadc4e932c0dd20464a690210bd38dd77 SHA256 9aa58c1db38655eda3ea1e2f1d90b33532609d16ca160c561b6f048dd9ce4b11
+MD5 64c5d09d5945b27fb32b36ad5909f973 alsa-utils-1.0.15_rc1.ebuild 2312
+RMD160 426e9128db05cc7dc9d0c539408440a3b8b475ad alsa-utils-1.0.15_rc1.ebuild 2312
+SHA256 9aa58c1db38655eda3ea1e2f1d90b33532609d16ca160c561b6f048dd9ce4b11 alsa-utils-1.0.15_rc1.ebuild 2312
+MISC ChangeLog 32381 RMD160 ffdc328d21f8db734526badf6bde91a6dd5f9c95 SHA1 fe67bcfbc03e9419df89ad8739fcf8adb936ddca SHA256 ad4d3122159d1eaec5cadaac8401af6b79341501b9fbb7d503e6f1bd86c8a7f1
+MD5 3dc743986556ece98478ac03b86f99b3 ChangeLog 32381
+RMD160 ffdc328d21f8db734526badf6bde91a6dd5f9c95 ChangeLog 32381
+SHA256 ad4d3122159d1eaec5cadaac8401af6b79341501b9fbb7d503e6f1bd86c8a7f1 ChangeLog 32381
 MISC metadata.xml 220 RMD160 e49f8bb330d1798cd2c8ee5335cef1784f0d7ccb SHA1 1b895fe6cae4b8eab08ba1a6a1212baf4b4b4105 SHA256 8570ef11cd59b0d8edb71e78eecaec423616836b10eacb86bee0de941f0ae054
 MD5 7c52acc7d4fe40bac97d3198a43dcbd6 metadata.xml 220
 RMD160 e49f8bb330d1798cd2c8ee5335cef1784f0d7ccb metadata.xml 220
@@ -88,10 +93,13 @@ SHA256 1a28d2f5f3186283c68d15b4893b297a550cfe99eb416389fed13d8298c46ae3 files/di
 MD5 353bea327d899275d0d9c7addde48a99 files/digest-alsa-utils-1.0.14_rc2-r3 265
 RMD160 fb49ddc8d34d96b51008565f020638b4dc742958 files/digest-alsa-utils-1.0.14_rc2-r3 265
 SHA256 262613d1f667889dbf9295f128b935e0d7de80b17279b01972d952071279f785 files/digest-alsa-utils-1.0.14_rc2-r3 265
+MD5 0b57a41455d85160451983a6f742ebfb files/digest-alsa-utils-1.0.15_rc1 268
+RMD160 ee4ffedce7a2cb7693942f6bbf4358e1905af91f files/digest-alsa-utils-1.0.15_rc1 268
+SHA256 f3bb99bb7c81d2ab3250d016670381ad12f5d834cc44b9cfe5f3a01feb72671d files/digest-alsa-utils-1.0.15_rc1 268
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.6 (GNU/Linux)
 
-iD8DBQFG7q+FyuNVb5qfaOYRAi1JAKDLtDXstVso70Tchdu0r2iGei23jQCfc6n6
-wu6UnclUk6zqeowTGqTnh0w=
-=49Nf
+iD8DBQFG7rHuyuNVb5qfaOYRAk5DAJ9oqmKyUiQuRYLdgpjJV1GhZKV9KgCfY+VW
+GtVTGWQjyFJK5PsuVnjh1Uk=
+=URP4
 -----END PGP SIGNATURE-----
