@@ -1,0 +1,3 @@
+MD5 f272e7681acc98d79b56909b935b7878 alsa-utils-1.0.15rc1.tar.bz2 1014178
+RMD160 22459fbda594c5d1e9030c1f1715437eee32bd73 alsa-utils-1.0.15rc1.tar.bz2 1014178
+SHA256 41ae98393b7a4fd2f32831f055a32e44efaf2344085cf2b5483400ddc616b632 alsa-utils-1.0.15rc1.tar.bz2 1014178
