@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/alsa-utils
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.214 2007/09/17 16:46:49 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.215 2007/09/17 16:57:06 phreak Exp $
+
+*alsa-utils-1.0.15_rc1 (17 Sep 2007)
+
+  17 Sep 2007; Christian Heim <phreak@gentoo.org>
+  +alsa-utils-1.0.15_rc1.ebuild:
+  New release candidate for alsa-utils.
 
 *alsa-utils-1.0.14-r1 (17 Sep 2007)
 
